@@ -1,3 +1,8 @@
+2005-12-14  Thorsten Kukuk  <kukuk@suse.de>
+
+	* nscd/Makefile: Don't build nscd_nischeck.
+	* nscd/nscd_nischeck.c: Removed.
+
 2005-12-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/renameat.c: Move errno setting code in
